Fix: message form overlaping issue

--- a/src/pages/Chat/styles/MessageForm.module.scss
+++ b/src/pages/Chat/styles/MessageForm.module.scss
@@ -47,3 +47,12 @@
 .dark_mood_color {
 	color: #e1e1e1;
 }
+.error_message_wrapper {
+	position: absolute;
+	bottom: -1.1rem;
+	left: 2%;
+
+	p {
+		font-size: 0.7rem;
+	}
+}
